🐛 item 조회 로직 오류 수정