@@ -2,7 +2,7 @@ package com.yono_yuno.backend.domain.item.bean;
 
 import com.yono_yuno.backend.domain.item.bean.small.CreateResponseGetItemAllDTOBean;
 import com.yono_yuno.backend.domain.item.bean.small.CreateResponseGetItemDTOBean;
-import com.yono_yuno.backend.domain.item.bean.small.GetItemEntityBean;
+import com.yono_yuno.backend.domain.item.bean.small.GetAllItemEntityBean;
 import com.yono_yuno.backend.domain.item.entity.ItemEntity;
 import com.yono_yuno.backend.domain.item.entity.dto.ResponseGetItemAllDTO;
 import com.yono_yuno.backend.global.error.CustomException;
@@ -15,41 +15,40 @@ import java.util.stream.Collectors;
 
 @Component
 public class GetAllItemBean {
-
-    private final GetItemEntityBean getItemEntityBean;
+    private final GetAllItemEntityBean getAllItemEntityBean;
     private final CreateResponseGetItemAllDTOBean createResponseGetItemAllDTOBean;
 
-    public GetAllItemBean(GetItemEntityBean getItemEntityBean, CreateResponseGetItemDTOBean createResponseGetItemDTOBean, CreateResponseGetItemAllDTOBean createResponseGetItemAllDTOBean) {
-        this.getItemEntityBean = getItemEntityBean;
+    public GetAllItemBean(GetAllItemEntityBean getAllItemEntityBean, CreateResponseGetItemDTOBean createResponseGetItemDTOBean, CreateResponseGetItemAllDTOBean createResponseGetItemAllDTOBean) {
+        this.getAllItemEntityBean = getAllItemEntityBean;
         this.createResponseGetItemAllDTOBean = createResponseGetItemAllDTOBean;
     }
 
-        public List<ResponseGetItemAllDTO> exec(String category, String sort) {
-       List<ItemEntity> itemList  = getItemEntityBean.exec(category);
+    public List<ResponseGetItemAllDTO> exec(String category, String sort) {
+        List<ItemEntity> itemEntityList;
+        if (category.equals("전체")) {
+            itemEntityList = getAllItemEntityBean.exec();
+        } else {
+            itemEntityList = getAllItemEntityBean.exec(category);
+        }
 
-        if(itemList.isEmpty()) {
+        if (itemEntityList.isEmpty()) {
             throw new CustomException(ErrorCode.ITEM_NOT_FOUND);
         }
 
-        return itemList.stream().map(createResponseGetItemAllDTOBean::exec)
-                .collect(Collectors.toList());
-    }
-
-    public List<ResponseGetItemAllDTO> getItemsByCategory(String category, String sort) {
-        List<ResponseGetItemAllDTO> items = this.exec(category, sort);
+        List<ResponseGetItemAllDTO> items = itemEntityList.stream().map(createResponseGetItemAllDTOBean::exec).toList();
 
         if (sort != null) {
             switch (sort) {
                 case "latest":
                     return items.stream()
                             .sorted(Comparator.comparing(
-                                    ResponseGetItemAllDTO::getCreateAt,
+                                    ResponseGetItemAllDTO::getCreatedAt,
                                     Comparator.nullsLast(Comparator.naturalOrder()) // null 값을 마지막으로 정렬
                             ).reversed())
                             .collect(Collectors.toList());
                 case "oldest":
                     return items.stream()
-                            .sorted(Comparator.comparing(ResponseGetItemAllDTO::getCreateAt))
+                            .sorted(Comparator.comparing(ResponseGetItemAllDTO::getCreatedAt))
                             .collect(Collectors.toList());
                 case "highPrice":
                     return items.stream()
@@ -62,6 +61,6 @@ public class GetAllItemBean {
             }
         }
 
-        return null;
+        return items;
     }
 }
